ajout server_packet, gestion connexion et ...
[conception]
- messages à tous est maintenant de la forme /msg - <message>
[manuel]
- ajout des auteurs
[client-server.h]
- ajout de la structure connection_info pour le premier message à envoyer par le
  client au servuer;
- ajout de la structure server_packet pour les réponses du serveur;
[connections.h]
- la structure connection a le socket et la structure sockaddr_in et le tid;
[connections.c]
- changement de la structure connection => add_connection() change;
- add_connection() retourne le pointeur vers la connection ajouté;
[server.c]
- receive_connections() permet de recevoir et les connexions et lancer la
  gestion de la connexion sur un thread;
- handle_client_communication() gère les requêtes du client;

--- a/doc/inf1010tp2-server.1
+++ b/doc/inf1010tp2-server.1
@@ -19,3 +19,12 @@ Spécifie le port sur lequel le serveur devra écouter.
 .TP
 .B -h, --help
 Affiche un texte d'aide sur la sortie standart (\fBstdout\fP).
+.SH AUTEURS
+.TP
+Écrit par
+.IP \(bu
+.\} 
+Simon Désaulniers <rostydela@gmail.com>
+.IP \(bu
+.\} 
+Frédéric Hamelin <fredhamelin91@gmail.com>
