--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -360,6 +360,52 @@
                 %conséquent, le serveur s'attendra à reçevoir un paquet "/disconnect".
             Le logiciel client est conçu avec une interface texte utilisant la librairie {\tt
             ncurses}. 
+            
+            La fenêtre a été divisée en 2 parties. La première en haut est celle qui affiche tous les messages provenant du serveur.
+            La deuxième partie est la ligne en bas qui sert à envoyer une commande ou un message au serveur.
+
+            La ligne servant à entrer les commandes et messages est simple à utiliser. Si on veut envoyer un message 
+            aux utilisateurs qui sont connectés dans notre channel, on n'a qu'à entrer le message s'il s'agit d'un message sinon
+            , pour les commandes on doit entrer un / avant chacune d'elle.
+
+            Voici les commandes qui peuvent être utilisées : 
+
+            Premièrement, la commande /connect qui sert à se connecter au serveur. Voici comment l'utiliser :
+
+            /connect <ip_serveur> <nom_utilisateur>
+
+            Ensuite, il y a la commande /join pour changer de channel :
+
+            /join <nom_channel>
+
+            Pour lister les channels disponibles, il faut utiliser la commande /list :
+
+            /list
+
+            Pour avoir la liste des noms des utilisateurs dans le channel, c'est la commande /names :
+
+            /names
+
+            Pour envoyer un message à une personne ou à tous, on utilise la commande /msg :
+
+            Pour un message à tous (même ceux qui ne sont pas dans le channel :
+
+            /msg - <message>
+
+            Pour un message à une personne :
+
+            /msg <nom_utilisateur> <message>
+
+            NB : Ne pas oublier qu'on peut envoyer un message seulement aux utilisateurs dans le channel en écrivant le message sans utiliser de commande.
+
+            Puis, pour se déconnecter on utilise la commande /disconnect :
+
+            /disconnect
+
+            Et finalement, pour quitter l'application, on utilise /quit :
+
+            /quit
+
         % subsection client (end)
 
         \subsection{Serveur} % (fold)
