Ajouter de quoi pour différencier les commandes dans le rapport

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -368,43 +368,62 @@
             aux utilisateurs qui sont connectés dans notre channel, on n'a qu'à entrer le message s'il s'agit d'un message sinon
             , pour les commandes on doit entrer un / avant chacune d'elle.
 
+
             Voici les commandes qui peuvent être utilisées : 
+
 
             Premièrement, la commande /connect qui sert à se connecter au serveur. Voici comment l'utiliser :
 
-            /connect <ip_serveur> <nom_utilisateur>
+
+            {\tt /connect <ipserveur> <nomutilisateur>}
+
 
             Ensuite, il y a la commande /join pour changer de channel :
 
-            /join <nom_channel>
+
+            {\tt /join <nomchannel>}
+
 
             Pour lister les channels disponibles, il faut utiliser la commande /list :
 
-            /list
+
+            {\tt /list}
+
 
             Pour avoir la liste des noms des utilisateurs dans le channel, c'est la commande /names :
 
-            /names
+
+            {\tt /names}
+
 
             Pour envoyer un message à une personne ou à tous, on utilise la commande /msg :
 
+
             Pour un message à tous (même ceux qui ne sont pas dans le channel :
 
-            /msg - <message>
+
+            {\tt /msg - <message>}
+
 
             Pour un message à une personne :
 
-            /msg <nom_utilisateur> <message>
+
+            {\tt /msg <nomutilisateur> <message>}
+
 
             NB : Ne pas oublier qu'on peut envoyer un message seulement aux utilisateurs dans le channel en écrivant le message sans utiliser de commande.
 
+
             Puis, pour se déconnecter on utilise la commande /disconnect :
 
-            /disconnect
+
+            {\tt /disconnect}
+
 
             Et finalement, pour quitter l'application, on utilise /quit :
 
-            /quit
+
+            {\tt /quit}
 
         % subsection client (end)
 
